# aas-core-opc-ua

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
continuous_integration/: precommit.py
dev_scripts/: update_to_latest_aas_core_meta.py
dev_scripts/aas_metamodels/: v3.py
dev_scripts/snippets/v3/: base_nodeset.xml
nodesets/v3/: nodeset.xml
